# aitinerary-capstone

./: .gitignore  README.md  agent_eval.ipynb  controller.py  final_input_test.ipynb  index.html  main.py  parse_example.py  prompting.py  pyproject.toml
assets/css/: main.css
assets/js/: main.js
input_handling_extraction/: README.md  pyproject.toml  run_app.sh
input_handling_extraction/data_persistence/: chat_saver.py  simple_user_system.py  users.csv
input_handling_extraction/data_persistence/user_chats/: michelle_chats.csv  test_chats.csv
input_handling_extraction/fastapi_app/: airport_resolver.py  extractor.py  main.py
input_handling_extraction/fastapi_app/models/: chat.py  users.py
input_handling_extraction/fastapi_app/routers/: chat.py  users.py
input_handling_extraction/fastapi_app/services/: chat_service.py  user_service.py
input_handling_extraction/streamlit_app/: home.py
input_handling_extraction/tests/: test_alice_conversation.py  test_extraction.py  test_session.py  test_user_system.py
new_input_handling/: airport_resolver.py  config.py  home.py  llm_logic.py  main.py  models.py  requirements.txt
src/: actions.py  controller.py  main.py  parse_example.py  parse_v2.py  prompting.py  session.py  test_looping.py
src/agent/: controller.py  prompting.py  session.py
src/archive/: delta.py
src/evaluation/: input_samples.jsonl
src/logs/20250712-235455-628683/task1/: conversation_06872693-18fc-7666-8000-e4ed4e7de436_10.txt  conversation_06872693-18fc-7666-8000-e4ed4e7de436_11.txt  conversation_06872693-18fc-7666-8000-e4ed4e7de436_2.txt  conversation_06872693-18fc-7666-8000-e4ed4e7de436_3.txt  conversation_06872693-18fc-7666-8000-e4ed4e7de436_4.txt  conversation_06872693-18fc-7666-8000-e4ed4e7de436_5.txt  conversation_06872693-18fc-7666-8000-e4ed4e7de436_6.txt  (+3 more)
src/models/: chat.py
testing_framework/: flight_test_data.json  generate.py  test_framework.ipynb
(+27 files in other folders)
