[project]
name = "browser-use-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Kenneth Lin",email = "kenneth.alex.lin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "browser-use[memory] (>=0.2.7,<0.3.0)",
    "playwright (>=1.52.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
