[project]
name = "browser-use-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Kenneth Lin",email = "kenneth.alex.lin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "browser-use>=0.5.3",
    "playwright>=1.53.0",
    "ruff>=0.12.1",
    "screeninfo>=0.8.1",
    "streamlit>=1.46.1",
]
