[project]
name = "browser-use-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Kenneth Lin",email = "kenneth.alex.lin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "browser-use>=0.5.5",
    "fastapi>=0.116.1",
    "playwright>=1.53.0",
    "pydantic>=2.5.0",
    "requests>=2.32.4",
    "ruff>=0.12.1",
    "screeninfo>=0.8.1",
    "streamlit>=1.46.1",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
